--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
         "mdickin.markdown-shortcuts",
         "streetsidesoftware.code-spell-checker",
         "streetsidesoftware.code-spell-checker-german",
-        "1YiB.rust-bundle"
+        "zerotaskx.rust-extension-pack"
       ]
     }
   }
