--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,6 @@
         "DavidAnson.vscode-markdownlint",
         "mdickin.markdown-shortcuts",
         "streetsidesoftware.code-spell-checker",
-        "1YiB.rust-bundle"
+        "zerotaskx.rust-extension-pack"
     ],
 }
